# Cpp

./: README.md
lab_06/: CMakeLists.txt  main.cpp
lab_1/: CMakeLists.txt  main.cpp  readme.md  tasks.cpp  tasks.h  tests.cpp
lab_2/: CMakeLists.txt  main.cpp  tasks.cpp  tasks.h  tests.cpp
lab_2/assets/: CMakeLists.txt  functions.cpp
lab_3/: 03.cpp  CMakeLists.txt
lab_4/: 04.cpp  CMakeLists.txt
lab_7/: CMakeLists.txt  iterator.cpp  smart-pointers.cpp
lab_8/: CMakeLists.txt  doctest.h  out_vec.txt  readme.md  stream copy.cpp  stream.cpp  string.cpp  string_view.cpp  student.cpp  student.h  student_tests.cpp
